--- a/html/css/style.css
+++ b/html/css/style.css
@@ -884,3 +884,11 @@ body {
 		margin-left: 0;
 	}
 }
+
+
+/*------------------------extra_page-----------------------------*/
+	
+	.comonclass{
+		padding:0 !important;
+		background:##f1f1f1;
+	}
