--- a/css/slider.css
+++ b/css/slider.css
@@ -53,8 +53,8 @@
 	width: 70%;
 	top: 90px;
 	font-size:6em;
-	z-index:11;
-	text-align: left;
+	z-index: 10;
+	text-align: center;
 }
 .da-slide p{
 	font-family: 'open_sansregular';
@@ -63,9 +63,9 @@
 	font-size: 16px;
 	overflow: hidden;
 	line-height: 24px;
-	text-align: left;
+	text-align: center;
 	margin: 0 auto;
-	width:60%;
+	width: 70%;
 	font-weight: 400;
 }
 .da-img{
@@ -82,7 +82,7 @@
 .da-slide .da-link{
 	top: 280px;
 	overflow: hidden;
-	text-align: left;
+	text-align: center;
 	margin: 0 auto;
 	font-weight: 400;
 	width:70%;
@@ -93,7 +93,7 @@
 	text-align: center;
 	left: 0px;
 	bottom: 20px;
-	z-index:111;
+	z-index: 2000;
 	-moz-user-select: none;
 	-webkit-user-select: none;
 }
