--- a/css/style.css
+++ b/css/style.css
@@ -188,9 +188,6 @@ body {
 	text-align: center;
 	margin: 0 auto;
 }
-.errorholder{
-	padding-left:0 !important;
-}
 .bg{
 	background: #3b3b3b;
 	-webkit-transition: all 0.3s ease-in-out;
@@ -567,75 +564,6 @@ body {
 	-o-transition: opacity .15s ease-in-out;
 	transition: opacity .15s ease-in-out;
 }
-
-.regpopup{
-	position:fixed;
-	width:100%;
-	height:100%;
-	background-color:rgba(0, 0, 0, 0.7);
-	z-index:9999 !important;
-	padding:6% 0 0 0;
-	left:0;
-	top:0;
-}
-.subreg{
-	width:500px;
-	margin:0 auto;
-	border-radius:4px;
-	padding:20px;
-	position:relative;
-	background:#fff;
-}
-.closse{
-	position: absolute;
-	top:0;
-	right:0;
-	color: #9C9C9C;
-	padding:10px !important;
-	font-size:16px !important;
-	text-decoration:none;
-	font-family: 'open_sansregular';
-}
-.closse:hover{
-	text-decoration:none;
-	color: #9C9C9C;
-}
-.subreg h2{
-	margin:0;
-	padding:0 0 15px 0;
-	font-size:24px;
-}
-.subreg table{
-	width:100%;
-	margin:20px 0 0 0;
-}
-.subreg table tr{
-	
-}
-.subreg table tr td{
-	padding:5px 0;
-	font-size:14px;
-}
-.picuplode{
-	padding: 0 !important;
-	height: auto !important;
-	border: none !important;
-	margin: 0 0 10px 0 !important;
-}
-.userpicture{
-	width:30px;
-	height:30px;
-	margin: 0 5px 0 0;
-	display:block;
-}
-.profile_pic{
-	width:100%;
-	width:30px;
-	height:30px;
-	border-radius:100%;
-	border: 1px solid #c5c5c5;
-}
-
 /* start tag_nav */
 .tag_nav {
 	margin: 8% 0;
@@ -784,99 +712,6 @@ body {
 .form-control:focus {
 	border-color: #ff5454;
 }
-
-.error_msgs{
-	position: absolute;
-	left: 0px;
-	color: rgb(255, 0, 0);
-	bottom:-25px;
-}
-.logindiv{
-	position: absolute;
-	top: -35px;
-	right: 4px;
-	z-index: 111;
-}
-	.logindiv p{
-		font-size:16px;
-		margin:0;
-		font-weight:300;
-		display: flex;
-		padding: 0px;
-	}
-	.logindiv p span{
-		font-size:16px;
-		margin:0;
-		padding:0 3px 0 0;
-		color:#41ab01 !important;
-	}
-	.logindiv a{
-		font-size:16px;
-		color:#000;
-		font-weight:300;
-		margin: 0 0 0 5px;
-		text-decoration:none;
-		transition: all 0.3s ease-in-out 0s;
-	}
-	.logindiv a:hover{
-		color:#FF5454;
-		text-decoration:none;
-	}
-#panel {
-		padding: 10px;
-		display: none;
-		position: absolute;
-		width: 230px;
-		right: -88px;
-		background-color: #FFF;
-		box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
-		top: 36px;
-	}
-
-	.accountId{
-		z-index:999;
-	}
-		.accountId table{
-			width:100%;
-		}
-		.accountId table tr td{
-			padding:5px 1px;
-			display:block;
-		}
-		.inputtext{
-			width:100%;
-			border: none;
-			text-align: center;
-			padding: 5px;
-			font-size: 14px;
-			color: #000;
-			height: 23px;
-		}
-		.loginbutton{
-			padding: 6px 25px;
-			text-align: center;
-			margin: 0px;
-			font-size: 16px;
-			font-weight: 300;
-			color: #000;
-			background: transparent none repeat scroll 0% 0%;
-			border: 2px solid #FF5454;
-			border-radius:4px;
-			float: left;
-			transition: all 0.4s ease 0s;
-			text-decoration:none;
-		}
-		.loginbutton:hover{
-				background:#FF5454;
-				color:#fff !important;
-				text-decoration:none;
-		}
-	.toparrow {
-		position: absolute;
-		top: -18px;
-		left: 20px;
-	}
-
 /* start details */
 .details img{
 	margin-bottom: 20px;
@@ -1049,3 +884,283 @@ body {
 		margin-left: 0;
 	}
 }
+
+/*--------inner_page--------------*/
+
+
+/*--------------------page_1--------------------------------*/
+
+	.leftNav{
+	}
+
+	.inernav{
+		padding:0;
+		border-top:1px solid #E9E9E9;
+		margin:30px 0 0 0;
+		display:black;
+	}
+		.inernav li{
+			display: block;
+		}
+		.inernav li a{
+			padding: 10px;
+			text-decoration: none;
+			display: block;
+			color: #000;
+			font-size: 16px;
+			font-weight: 300;
+			transition: all 0.4s ease 0s;
+			border-bottom: 1px solid #E9E9E9;
+		}
+		.inernav li a:hover{
+			background: #FF5454 none repeat scroll 0% 0%;
+			color: #FFF;
+			padding: 10px 15px;
+			border-bottom: 1px solid #FF5454;
+		}
+		.inernav li a.active{
+			background: #FF5454 none repeat scroll 0% 0%;
+			color: #FFF;
+			padding: 10px 15px;
+			border-bottom: 1px solid #FF5454;
+		
+		}
+		.aboutNew{
+			padding:0 0 4% 0;
+		}
+
+/*----------------------rightNew------------------------*/
+
+	.rightNew{
+		border-left:1px solid #E9E9E9;
+		padding:0 !important;
+		margin-top:20px;
+	}
+	.child_right{
+		padding:0px 0 0 30px;
+	}
+		.userIDnew{
+			text-align: center !important;
+			font-size: 20px !important;
+			margin: 0px;
+			padding: 10px 0px 20px 0;
+			font-weight:300;
+		}
+		.userIDnew span{
+			color:#FF5454;
+		}
+		.science_Div{
+			margin-top: 20px;
+			padding:20px 0;
+			border-top: 1px dashed #E9E9E9;
+		}
+		.myicon{
+			color:#3B3B3B;
+			margin-right:8px;
+			line-height:inherit !important;
+		}
+	.child_right h3{
+		border-bottom: 2px dotted #FF5454;
+		padding:10px 0;
+		margin: 0px;
+		width:15%;
+		color: #FF5454;
+		/*box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);*/
+	}
+	.videoDiv{
+		padding:0;
+	}
+	.myvideo{
+		margin-bottom:0 !important;
+		height:120px !important;
+		width:100%;
+	}
+	.myicon2{
+		color:#FF5454;
+		margin-right:8px;
+	}
+	.myNav li a{
+		padding:20px !important;
+	}
+	.myText{
+		padding:20px 0 0 0;
+	}
+	
+	.science_Div table{
+		margin-top:20px;
+	}
+	.science_Div table tr th{
+		font-size:16px !important;
+		font-weight:300 !important;
+		padding:8px;
+		color:#fff;
+		border-bottom:none !important;
+		background:#FF5454;
+	}
+	.science_Div table tr{
+		font-size:14px !important;
+		font-weight:300 !important;
+		padding:0px 8px !important;
+	}
+	.science_Div table tr td{
+		vertical-align:middle !important;
+	}
+	.science_Div table tr td a{
+		text-decoration:none;
+		display:block;
+		padding:5px 0 !important;
+		color:#333;
+		transition: all 0.4s ease 0s;
+	}
+	.science_Div table tr td a:hover{
+		text-decoration:none;
+		color:#FF5454;
+	}
+	.btn {
+		display: inline-block !important;
+		padding: 0px 10px !important;
+		font-size:10px !important;
+		
+	}
+	.btn-success{
+		background-color: #FF5454 !important;
+		border-color: #FF5454 !important;
+	}
+	.paginationMy li a{
+		font-size: 10px !important;
+		padding: 5px 10px !important;
+		
+	}
+	
+	.lableText{
+		font-size: 16px;
+		font-weight: 300;
+		padding: 5px 0px 0px;
+	}
+	.help-block {
+		display: block;
+		margin-top: 5px;
+		margin-bottom: 10px;
+		color: #8D8D8D;
+	}
+	.newbutton{
+		padding: 8px 25px !important;
+		text-align: center;
+		margin: 0px;
+		font-size: 16px;
+		font-weight: 300;
+		color: #333;
+		background: transparent none repeat scroll 0% 0%;
+		border: 1px solid #FF5454;
+		border-radius: 4px;
+		transition: all 0.4s ease 0s;
+		text-decoration: none;
+		display:block;
+	}
+	.newbutton:hover{
+		background:#FF5454;
+		border: 1px solid #FF5454;
+		color:#fff;
+	}
+	.newbutton2{
+		padding: 8px 25px !important;
+		text-align: center;
+		margin: 0px;
+		font-size: 16px;
+		font-weight: 300;
+		color: #333;
+		background: transparent none repeat scroll 0% 0%;
+		border: 1px solid #E6E7E8;
+		border-radius: 4px;
+		transition: all 0.4s ease 0s;
+		text-decoration: none;
+		display:block;
+	}
+	.newbutton2:hover{
+		background:#E6E7E8;
+		border: 1px solid #E6E7E8;
+		color:#333;
+	}
+	.mypanel{
+		color:#333;
+		text-decoration:none;
+		display:block;
+		padding:0 !important;
+		background-color: #E9E9E9 !important;
+		border-color: #E9E9E9 !important;
+	}
+	.mypanel:hover{
+		color:#333;
+		text-decoration:none;
+	}
+	.mypanel.active{
+		color:#333;
+		text-decoration:none;
+	}
+	.panel-heading {
+		padding: 4px 15px !important;
+	}
+	.maths_nav{
+		margin:0;
+		padding:0;
+	}
+		.maths_nav li{
+			display:block;
+			list-style:none !important;
+			padding:6px 15px;
+			margin-bottom:10px;
+		}
+			.maths_nav li a{
+				padding:6px 15px;
+				color:#333;
+				font-size:14px;
+				text-decoration:none;
+				transition: all 0.4s ease 0s;
+			}
+			.maths_nav li a:hover{
+				text-decoration:none;
+				color:#FF5454;
+				padding:6px 20px;
+				box-shadow:2px 2px 2px rgba(0, 0, 0, 0.3);
+			}
+			.maths_nav li a.active{
+				text-decoration:none;
+				color:#FF5454;
+				padding:6px 20px;
+				box-shadow:2px 2px 2px rgba(0, 0, 0, 0.3);
+			}
+		.rightborder{
+			border-right:1px solid #ECECEC;
+		}
+		
+/*---------------------------promosation------------------------------------*/
+
+	.promosation{
+		background: transparent url("../images/promosation.jpg") repeat 0 0;
+		background-position:center;
+		background-origin:content-box;
+		/*background-size:cover;*/
+		padding:5% 0 1.5% 0;
+		
+	}
+	.child_promo{
+		width:450px;
+		margin:0 auto;
+		padding:0;
+		border-radius:5px;
+		background:#fff;
+		box-shadow:0px 0px 2px rgba(0, 0, 0, 0.2);
+	}
+	.promotext{
+		text-align: center !important;
+		font-size: 30px !important;
+		margin: 0px;
+		color:#fff;
+		padding: 15px 0;
+		font-weight:300;
+		background:#FF5454;
+		border-radius:5px 5px 0 0;
+	}
+	.promo_button{
+		margin: 15px 0px 0px 80px;
+	}
