--- a/courses/css/style.css
+++ b/courses/css/style.css
@@ -793,7 +793,7 @@ body {
 }
 .logindiv{
 	position: absolute;
-	top: -35px;
+	top: -40px;
 	right: 4px;
 	z-index: 111;
 }
@@ -811,12 +811,14 @@ body {
 		color:#41ab01 !important;
 	}
 	.logindiv a{
-		font-size:16px;
-		color:#000;
-		font-weight:300;
-		margin: 0 0 0 5px;
-		text-decoration:none;
+		font-size: 14px;
+		color: #000;
+		font-weight: 300;
+		margin: 0px 0px 0px 5px;
+		text-decoration: none;
 		transition: all 0.3s ease-in-out 0s;
+		background: rgba(255, 255, 255, 0.5) none repeat scroll 0% 0%;
+		padding: 8px;
 	}
 	.logindiv a:hover{
 		color:#FF5454;
