--- a/courses/css/style.css
+++ b/courses/css/style.css
@@ -817,8 +817,8 @@ body {
 		margin: 0px 0px 0px 5px;
 		text-decoration: none;
 		transition: all 0.3s ease-in-out 0s;
-		background: rgba(255, 255, 255, 0.5) none repeat scroll 0% 0%;
-		padding: 8px;
+		background: rgba(255, 255, 255, 0.8) none repeat scroll 0% 0%;
+		padding:3px 8px;
 	}
 	.logindiv a:hover{
 		color:#FF5454;
@@ -829,10 +829,10 @@ body {
 		display: none;
 		position: absolute;
 		width: 230px;
-		right: -88px;
+		right: -70px;
 		background-color: #FFF;
 		box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
-		top: 36px;
+		top: 52px;
 	}
 
 	.accountId{
@@ -1120,6 +1120,7 @@ body {
 			margin-top: 20px;
 			padding:20px 0;
 			border-top: 1px dashed #E9E9E9;
+			position:relative;
 		}
 		.myicon{
 			color:#3B3B3B;
@@ -1480,4 +1481,22 @@ body {
 		line-height: 37px !important;
 		border-radius: 100%;
 		padding: 0 14px;
+	}
+	.feedbackDiv{
+		width:600px;
+		margin:0 auto;
+	}
+	.coundown{
+		position: fixed;
+		width: 150px;
+		height: 38px;
+		padding: 8px;
+		top: 49%;
+		right: 6%;
+		background:#FF5454 none repeat scroll 0% 0%;
+		text-align:center;
+		font-size:16px;
+		color:#fff;
+		border-radius:0 15px 0 15px;
+		
 	}
