--- a/css/style.css
+++ b/css/style.css
@@ -817,8 +817,8 @@ body {
 		margin: 0px 0px 0px 5px;
 		text-decoration: none;
 		transition: all 0.3s ease-in-out 0s;
-		background: rgba(255, 255, 255, 0.5) none repeat scroll 0% 0%;
-		padding: 8px;
+		background: rgba(255, 255, 255, 0.8) none repeat scroll 0% 0%;
+		padding:3px 8px;
 	}
 	.logindiv a:hover{
 		color:#FF5454;
@@ -829,10 +829,10 @@ body {
 		display: none;
 		position: absolute;
 		width: 230px;
-		right: -88px;
+		right: -70px;
 		background-color: #FFF;
 		box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
-		top: 36px;
+		top: 52px;
 	}
 
 	.accountId{
