--- a/courses/css/style.css
+++ b/courses/css/style.css
@@ -1537,10 +1537,13 @@ body {
 		padding:0 5px;
 	}
 	.right_ans{
-		background:#ECECEC none repeat scroll 0% 0%;
+		border:#FF5454 1px dashed;
 		color:#2a2a2a;
-		padding:10px !important;
-		width:25%;
+		padding:5px 10px !important;
+	}
+	.right_ans img{
+		margin:0;
+		float:right;
 	}
 	.questionDiv_3{
 		border-bottom:1px solid #ECECEC;
