--- a/courses/css/style.css
+++ b/courses/css/style.css
@@ -1175,9 +1175,10 @@ body {
 	}
 	.science_Div table tr td a{
 		text-decoration:none;
-		display:block;
+		/*display:block;*/
 		padding:5px 0 !important;
 		color:#333;
+		vertical-align:middle !important;
 		transition: all 0.4s ease 0s;
 	}
 	.science_Div table tr td a:hover{
@@ -1576,4 +1577,11 @@ body {
 		}
 		.right_ansnew p{
 			margin:0 !important;
+		}
+		.pdf_icon{
+			margin-bottom:0 !important;
+			float:right;
+			border:1px solid #FF5454;
+			box-shadow:0px 0px 3px rgba(0, 0, 0 ,0.3);
+			border-radius:0 5px 0 0;
 		}
