--- a/css/style.css
+++ b/css/style.css
@@ -1465,3 +1465,14 @@ body {
 		color:#868686 !important;
 		/*display: block;*/
 	}
+	.smp_ques{
+		width:100%;
+		height:100%;
+		border-radius:100%;
+	}
+	.newtwo_bg{
+		border-radius:100%;
+		width:150px !important;
+		border:2px solid #c5c5c5;
+		height:150px !important;
+	}
