--- a/courses/css/style.css
+++ b/courses/css/style.css
@@ -1587,7 +1587,7 @@ body {
 		}
 		.brows_video{
 			font-size: 18px !important;
-			line-height: 0;
+			line-height: 28px !important;
 			margin-left: 8px !important;
 			color: #2a2a2a;
 		}
