--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 }
 body {
 	font-family: 'open_sansregular';
-	background:#ffffff;
+	background:#ffffff !important;
 	font-size: 100%;
 }
 /* start header */
@@ -41,7 +41,7 @@ body {
 }
 /* search */
 .h_search{
-	width: 30%;
+	width: 32%;
 	position: relative;
 	margin-top: 2%;
 }
@@ -806,9 +806,16 @@ body {
 .logindiv{
 	position: absolute;
 	top: -40px;
-	right: 4px;
+	left: 0;
 	z-index: 111;
 }
+	.logindiv h5{
+		float: left;
+		margin: 0px;
+		color:#FF5454;
+		/*padding:5px 8px;
+		background: rgba(255, 255, 255, 0.8) none repeat scroll 0% 0%;*/
+	}
 	.logindiv p{
 		font-size:16px;
 		margin:0;
@@ -837,15 +844,15 @@ body {
 		text-decoration:none;
 	}
 #panel {
-		padding: 10px;
-		display: none;
-		position: absolute;
-		width: 230px;
-		right: -70px;
-		background-color: #FFF;
-		box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
-		top: 52px;
-	}
+	padding: 10px;
+	display: none;
+	position: absolute;
+	width: 230px;
+	right: -226px;
+	background-color: #FFF;
+	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
+	top: 42px;
+}
 
 	.accountId{
 		z-index:999;
@@ -1476,3 +1483,47 @@ body {
 		border:2px solid #c5c5c5;
 		height:150px !important;
 	}
+	
+/*------------------blink+_style----------------*/
+
+	@-webkit-keyframes blink {
+    0% {
+        opacity:1;
+    }
+    50% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+@-moz-keyframes blink {
+    0% {
+        opacity:1;
+    }
+    50% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+.objblink {
+-webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    
+    -webkit-animation-direction: normal;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-name: blink;
+    -webkit-animation-timing-function: ease-in-out;
+    
+-moz-animation-direction: normal;
+    -moz-animation-duration: 2s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-name: blink;
+    -moz-animation-timing-function: ease-in-out;    
+}
