--- a/courses/css/style.css
+++ b/courses/css/style.css
@@ -794,9 +794,16 @@ body {
 .logindiv{
 	position: absolute;
 	top: -40px;
-	right: 4px;
+	left: 0;
 	z-index: 111;
 }
+	.logindiv h5{
+		float: left;
+		margin: 0px;
+		color:#FF5454;
+		/*padding:5px 8px;
+		background: rgba(255, 255, 255, 0.8) none repeat scroll 0% 0%;*/
+	}
 	.logindiv p{
 		font-size:16px;
 		margin:0;
@@ -1620,3 +1627,47 @@ body {
 			border:1px solid #2a2a2a;
 			text-decoration:none;
 		}
+	
+/*------------------blink+_style----------------*/
+
+	@-webkit-keyframes blink {
+    0% {
+        opacity:1;
+    }
+    50% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+@-moz-keyframes blink {
+    0% {
+        opacity:1;
+    }
+    50% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+.objblink {
+-webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    
+    -webkit-animation-direction: normal;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-name: blink;
+    -webkit-animation-timing-function: ease-in-out;
+    
+-moz-animation-direction: normal;
+    -moz-animation-duration: 2s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-name: blink;
+    -moz-animation-timing-function: ease-in-out;    
+}
