--- a/courses/css/style.css
+++ b/courses/css/style.css
@@ -23,11 +23,13 @@ body {
 .header_bg{
 	border-top:8px groove #3b3b3b;
 	background: #ffffff;
+	position:relative;
 }
 .header_bg1 {
 	border-top:8px groove #3b3b3b;
 	background: url('../images/slider_bg.jpg') no-repeat  left;
 	background-size: 100%;
+	position:relative;
 }
 .header{
 	padding: 2% 0;
@@ -794,7 +796,7 @@ body {
 .logindiv{
 	position: absolute;
 	top: -40px;
-	left: 0;
+	right: 0;
 	z-index: 111;
 }
 	.logindiv h5{
@@ -1670,4 +1672,9 @@ body {
     -moz-animation-iteration-count: infinite;
     -moz-animation-name: blink;
     -moz-animation-timing-function: ease-in-out;    
+}
+.iner_logheader{
+	position: absolute;
+	left: 36%;
+	top: 25%;
 }
