--- a/courses/css/style.css
+++ b/courses/css/style.css
@@ -1171,6 +1171,7 @@ body {
 		font-weight:300 !important;
 		padding:8px;
 		color:#fff;
+		text-align:center;
 		border-bottom:none !important;
 		background:#FF5454;
 	}
