--- a/courses/css/style.css
+++ b/courses/css/style.css
@@ -1514,8 +1514,8 @@ body {
 	.map_view_det{
 		border:dashed 2px #c5c5c5;
 		padding:5px;
-		width:600px;
-		height:348px;
+		width:100%;
+		height:100%;
 		margin:0 auto;
 	}
 	.promosation2{
