--- a/css/style.css
+++ b/css/style.css
@@ -1580,9 +1580,42 @@ body {
 
 	.sitemap ul li{
 		font-size:16px;
+		line-height:30px;
+	}
+	.sitemap ul li a{
+		font-size:16px;
+		color:#2a2a2a;
+		transition: all 1s ease-in-out;
 		
 	}
+		.sitemap ul li a:hover{
+			color:#FF5454;
+			padding:10px 10px;
+			text-decoration:none;
+			
+		}
+		.sitemap ul li a.active{
+			color:#FF5454;
+			padding:6px 0;
+			text-decoration:none;
+			
+		}
 		.sub_sitemap li{
 			color:#FF5454 !important;
 			font-size:14px !important;
 		}
+			.sub_sitemap li a{
+				font-size:14px !important;
+				color:#2a2a2a;
+				transition: all 1s ease-in-out;
+			}
+			.sub_sitemap li a:hover{
+				color:#FF5454;
+				padding:10px 10px;
+				text-decoration:none;
+			}
+			.sub_sitemap li a.active{
+				color:#2a2a2a;
+				padding:10px 10px;
+				text-decoration:none;
+			}
